@@ -57,6 +57,10 @@ class ChEMBLTargetCofactorProvider(StashableBase):
     def __getCofactorDataPath(self):
         return os.path.join(self.__dirPath, "ChEMBL-cofactor-data.json")
 
+    def reload(self):
+        self.__fD = self.__reload(self.__dirPath, useCache=True)
+        return True
+
     def __reload(self, dirPath, **kwargs):
         startTime = time.time()
         fD = {}
